plugins {
    // Plugins automatically generated by MLGradleWriter.kt
    alias(libs.plugins.android.application)
}

android {
    namespace = "dev.mutwakil.kotlinide"
    compileSdk = 36
    buildToolsVersion = "36.0.0"

    defaultConfig {
        applicationId = "dev.mutwakil.kotlinide"
        minSdk = 26
        targetSdk = 36
        versionCode = 1
        versionName = '0.1-Alpha'

        testInstrumentationRunner = 'androidx.test.runner.AndroidJUnitRunner'
      
       vectorDrawables { 
            useSupportLibrary = true
       }
    }

    buildFeatures {
        viewBinding = true
    }
    
   signingConfigs {
        release {
            storeFile file("keystore.jks")
            storePassword System.getenv("KEYSTORE_PASSWORD")
            keyAlias System.getenv("KEY_ALIAS")
            keyPassword System.getenv("KEY_PASSWORD")
        }
    }

    buildTypes {
        release {
            signingConfig = signingConfigs.release
            minifyEnabled = true
            shrinkResources = true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
       debug {
            signingConfig = signingConfigs.release
       }         
    }

    compileOptions {
        coreLibraryDesugaringEnabled = true
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }
    buildFeatures {
        viewBinding = true
    }
    
    packaging {
        resources {
            excludes += [
                "kotlin/**/kotlin_builtins",
                "kotlin/**/kotlin_metadata", 
                "kotlin/*"
            ]
        }
    }
    
    packagingOptions {
            exclude 'kotlin/concurrent/atomics/atomics.kotlin_builtins'
            exclude 'kotlin/coroutines/coroutines.kotlin_builtins'
            exclude 'kotlin/kotlin.kotlin_builtins'
     }
    
}

dependencies {
    implementation 'androidx.annotation:annotation:1.7.0'
    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.1.5")
	
	 implementation 'org.antlr:antlr4-runtime:4.13.2'
	 
	 implementation 'com.github.TutorialsAndroid:crashx:6.0.19'
	
	
    implementation project(':lsp')

    implementation project(':kotlinc')

    implementation  libs.androidx.core  
    implementation  libs.androidx.appcompat  
    implementation  libs.material  
    implementation  libs.androidx.constraintlayout  
    implementation libs.soraEditor
    implementation libs.soraEditor.treesitter
    implementation libs.soraEditor.textmate
    implementation libs.soraEditor.lsp
	
	implementation(libs.org.eclipse.lsp4j.lsp4j)
    implementation(libs.org.eclipse.lsp4j.jsonrpc) 
    
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-exports=jdk.compiler/sun.nio.ch=ALL-UNNAMED"
    ]
}
